--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,24 @@
-django
-djangorestframework
-black
-pylint
-pylint-django
+asgiref==3.4.1
+astroid==2.8.4
+black==21.10b0
+click==8.0.3
+colorama==0.4.4
+Django==3.2.9
+djangorestframework==3.12.4
+isort==5.10.1
+lazy-object-proxy==1.6.0
+mccabe==0.6.1
+mypy-extensions==0.4.3
+pathspec==0.9.0
+platformdirs==2.4.0
+pylint==2.11.1
+pylint-django==2.4.4
+pylint-plugin-utils==0.6
+python-decouple==3.5
+pytz==2021.3
+regex==2021.11.10
+sqlparse==0.4.2
+toml==0.10.2
+tomli==1.2.2
+typing-extensions==3.10.0.2
+wrapt==1.13.3
