--- a/requirements.txt
+++ b/requirements.txt
@@ -7,12 +7,14 @@ Django==3.2.9
 django-cors-headers==3.10.0
 django-filter==21.1
 djangorestframework==3.12.4
+djangorestframework-simplejwt==5.0.0
 isort==5.10.1
 lazy-object-proxy==1.6.0
 mccabe==0.6.1
 mypy-extensions==0.4.3
 pathspec==0.9.0
 platformdirs==2.4.0
+PyJWT==2.3.0
 pylint==2.11.1
 pylint-django==2.4.4
 pylint-plugin-utils==0.6
