--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ lazy-object-proxy==1.6.0
 mccabe==0.6.1
 mypy-extensions==0.4.3
 pathspec==0.9.0
+Pillow==8.4.0
 platformdirs==2.4.0
 PyJWT==2.3.0
 pylint==2.11.1
