--- a/requirements.txt
+++ b/requirements.txt
@@ -3,14 +3,17 @@ astroid==2.8.4
 black==21.10b0
 click==8.0.3
 colorama==0.4.4
+dj-database-url==0.5.0
 Django==3.2.9
 django-cors-headers==3.10.0
 django-filter==21.1
+django-heroku==0.3.1
 django-versatileimagefield==2.2
 djangorestframework==3.12.4
 djangorestframework-serializer-extensions==2.0.1
 djangorestframework-simplejwt==5.0.0
 drf-flex-fields==0.9.6
+gunicorn==20.1.0
 hashids==1.3.1
 isort==5.10.1
 lazy-object-proxy==1.6.0
@@ -19,6 +22,7 @@ mypy-extensions==0.4.3
 pathspec==0.9.0
 Pillow==8.4.0
 platformdirs==2.4.0
+psycopg2==2.9.2
 PyJWT==2.3.0
 pylint==2.11.1
 pylint-django==2.4.4
@@ -32,4 +36,5 @@ sqlparse==0.4.2
 toml==0.10.2
 tomli==1.2.2
 typing-extensions==3.10.0.2
+whitenoise==5.3.0
 wrapt==1.13.3
