--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.4.1
 astroid==2.8.4
+attrs==21.2.0
 black==21.10b0
 click==8.0.3
 colorama==0.4.4
@@ -13,9 +14,12 @@ djangorestframework==3.12.4
 djangorestframework-serializer-extensions==2.0.1
 djangorestframework-simplejwt==5.0.0
 drf-flex-fields==0.9.6
+drf-spectacular==0.21.0
 gunicorn==20.1.0
 hashids==1.3.1
+inflection==0.5.1
 isort==5.10.1
+jsonschema==4.2.1
 lazy-object-proxy==1.6.0
 mccabe==0.6.1
 mypy-extensions==0.4.3
@@ -27,13 +31,17 @@ PyJWT==2.3.0
 pylint==2.11.1
 pylint-django==2.4.4
 pylint-plugin-utils==0.6
+pyrsistent==0.18.0
 python-decouple==3.5
 python-magic==0.4.24
+python-magic-bin==0.4.14
 pytz==2021.3
+PyYAML==6.0
 regex==2021.11.10
 sqlparse==0.4.2
 toml==0.10.2
 tomli==1.2.2
 typing-extensions==3.10.0.2
+uritemplate==4.1.1
 whitenoise==5.3.0
 wrapt==1.13.3
