--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,14 @@ asgiref==3.4.1
 astroid==2.8.4
 attrs==21.2.0
 black==21.10b0
+certifi==2021.10.8
+charset-normalizer==2.0.10
 click==8.0.3
+cloudinary==1.28.0
 colorama==0.4.4
 dj-database-url==0.5.0
 Django==3.2.9
+django-cloudinary-storage==0.3.0
 django-cors-headers==3.10.0
 django-filter==21.1
 django-heroku==0.3.1
@@ -17,6 +21,7 @@ drf-flex-fields==0.9.6
 drf-spectacular==0.21.0
 gunicorn==20.1.0
 hashids==1.3.1
+idna==3.3
 inflection==0.5.1
 isort==5.10.1
 jsonschema==4.2.1
@@ -37,10 +42,13 @@ python-magic==0.4.24
 pytz==2021.3
 PyYAML==6.0
 regex==2021.11.10
+requests==2.27.1
+six==1.16.0
 sqlparse==0.4.2
 toml==0.10.2
 tomli==1.2.2
 typing-extensions==3.10.0.2
 uritemplate==4.1.1
+urllib3==1.26.8
 whitenoise==5.3.0
 wrapt==1.13.3
